--- a/pom.xml
+++ b/pom.xml
@@ -51,7 +51,12 @@
 	  <dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
-	    <!--<version>8.0.18</version>-->
+	    <version>5.1.46</version><!--$NO-MVN-MAN-VER$-->
+	  </dependency>
+	  <dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>2.3.0</version>
 	  </dependency>
    </dependencies>
 
