--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,6 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/imobiliaria?serverTimezone=UTC
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/imobiliaria?useUnicode=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=admin
-spring.jpa.hibernate.dbl-auto=update
-spring.datasource.platform=mysql
-spring.datasource.initialization-mode=always
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.data.jpa.repositories.enabled=true
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
-spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
