--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
       	<groupId>org.hibernate</groupId>
       	<artifactId>hibernate-core</artifactId>
       </dependency>
-      
       <dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -54,9 +53,19 @@
 	    <version>5.1.46</version><!--$NO-MVN-MAN-VER$-->
 	  </dependency>
 	  <dependency>
+	    <groupId>io.springfox</groupId>
+	    <artifactId>springfox-swagger2</artifactId>
+	    <version>2.4.0</version>
+	  </dependency>
+	  <dependency>
 	    <groupId>javax.xml.bind</groupId>
 	    <artifactId>jaxb-api</artifactId>
 	    <version>2.3.0</version>
+	  </dependency>
+	  <dependency>
+		<groupId>io.springfox</groupId>
+		<artifactId>springfox-swagger-ui</artifactId>
+		<version>2.4.0</version>
 	  </dependency>
    </dependencies>
 
