--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
     "boostrap": "^2.0.0",
+    "bootstrap": "^4.6.0",
+    "http-server": "^0.12.3",
     "sass": "^1.32.5"
   }
 }
