--- a/pom.xml
+++ b/pom.xml
@@ -36,10 +36,6 @@
          <scope>test</scope>
       </dependency>
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-thymeleaf</artifactId>
-      </dependency>
-      <dependency>
       	<groupId>org.hibernate</groupId>
       	<artifactId>hibernate-core</artifactId>
       </dependency>
@@ -67,6 +63,10 @@
 		<artifactId>springfox-swagger-ui</artifactId>
 		<version>2.4.0</version>
 	  </dependency>
+       <dependency>
+           <groupId>org.springframework.security</groupId>
+           <artifactId>spring-security-core</artifactId>
+       </dependency>
    </dependencies>
 
    <build>
