--- a/pom.xml
+++ b/pom.xml
@@ -43,11 +43,11 @@
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-data-jpa</artifactId>
 	  </dependency>
-	  <dependency>
-	    <groupId>mysql</groupId>
-	    <artifactId>mysql-connector-java</artifactId>
-	    <version>5.1.46</version><!--$NO-MVN-MAN-VER$-->
-	  </dependency>
+       <dependency>
+           <groupId>mysql</groupId>
+           <artifactId>mysql-connector-java</artifactId>
+           <version>8.0.18</version>
+       </dependency>
 	  <dependency>
 	    <groupId>io.springfox</groupId>
 	    <artifactId>springfox-swagger2</artifactId>
